# Nebula

./: .gitignore  LICENSE  NOTICE  README.md  eslint.config.js  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
src/: app.d.ts  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/lib/capability/: capability.ts
src/lib/chat/: prompt.ts  reasoning.ts
src/lib/context/: compiler.ts  cost.ts  redact.ts  roundtrip.ts  sources.ts
src/lib/db/: store.ts
src/lib/embed/: embed-client.ts  embed.worker.ts  embedder.ts
src/lib/graph/: entities.ts  (+4 more)
src/routes/: +layout.ts  +page.svelte
static/: coi-serviceworker.js
tests/integration/: chat.test.ts  db-store.test.ts  graphrag-flow.test.ts  ingestion-state.test.ts  lexical-recall.test.ts  seed-graph.test.ts  settings-persist.test.ts  yamaha-deal-graphrag.test.ts
tests/models/: article-pipeline.test.ts  embed-text-retrieval.test.ts  embedder.test.ts  semantic.test.ts  vietnamese-note.test.ts
tests/unit/: catalog.test.ts  chunker.test.ts  context-compiler.test.ts  context-cost.test.ts  context-redact.test.ts  context-roundtrip.test.ts  context-sources.test.ts  embed-text.test.ts  embedder-retry.test.ts  entities.test.ts  entity-resolve.test.ts  fast-extract.test.ts  graph-batch.test.ts  markdown.test.ts  note-crud.test.ts  prompt.test.ts  reasoning.test.ts  references.test.ts  retrieval.test.ts  scope.test.ts  settings.test.ts  template.test.ts  vault-import.test.ts  vault-note.test.ts  wikilink.test.ts
(+29 files in other folders)
